* on home page: ** fixed minor spacing issues ** right-aligned attributions ** added ellipses

--- a/styles/everything.css
+++ b/styles/everything.css
@@ -39,3 +39,8 @@ u
 {
 	text-decoration: underline;
 }
+
+blockquote .attribution
+{
+	text-align: right;
+}
